--- a/config/routes/easy_admin.yaml
+++ b/config/routes/easy_admin.yaml
@@ -1,6 +1,6 @@
 # config/routes/easy_admin.yaml
 easy_admin_bundle:
-    resource: '@EasyAdminBundle/Controller/EasyAdminController.php'
+    resource: 'App\Controller\AdminController'
     prefix: /admin
     type: annotation
 
